EEVEE SSS light is missing from the diffuse light render pass #81055

Closed
opened 2020-09-22 13:42:32 +02:00 by Jeroen Bakker · 6 comments
Member

System Information
Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.35.0, 5.4.0-48-generic, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.8

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 09:17, hash: 085329f114
Worked: (newest version of Blender that worked as expected)
Regression introduced by f3a65a1b4a

Short description of error
When rendering a SSS material in eevee, the diffuse light renderpsas does not contain that light.

Exact steps for others to reproduce the error

  1. Start Blender
  2. Select Cube
  3. Go to material tab
  4. Set Subsurface slider to 1
  5. In the 3d viewport enable the Diffuse Light Render Pass.

subsurface.blend

Technical Analysis
When postprocessing the render pass the second light texture is already black.
The output of the render pass accum is also black.

when removing the early break in gpu framebuffer it will render the sss. But it has flickering.

diff --git a/source/blender/gpu/intern/gpu_framebuffer.cc b/source/blender/gpu/intern/gpu_framebuffer.cc
index 8d9a1301be0..99b671ed72c 100644
--- a/source/blender/gpu/intern/gpu_framebuffer.cc
+++ b/source/blender/gpu/intern/gpu_framebuffer.cc
@@ -107,10 +107,10 @@ void FrameBuffer::attachment_set(GPUAttachmentType type, const GPUAttachment &ne
 
   GPUAttachment &attachment = attachments_[type];
 
-  if (attachment.tex == new_attachment.tex && attachment.layer == new_attachment.layer &&
-      attachment.mip == new_attachment.mip) {
-    return; /* Exact same texture already bound here. */
-  }
+  // if (attachment.tex == new_attachment.tex && attachment.layer == new_attachment.layer &&
+  //     attachment.mip == new_attachment.mip) {
+  //   return; /* Exact same texture already bound here. */
+  // }
   /* Unbind previous and bind new. */
   /* TODO(fclem): cleanup the casts. */
   if (attachment.tex) {
**System Information** Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.35.0, 5.4.0-48-generic, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.8 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-22 09:17, hash: `085329f114` Worked: (newest version of Blender that worked as expected) Regression introduced by f3a65a1b4a **Short description of error** When rendering a SSS material in eevee, the diffuse light renderpsas does not contain that light. **Exact steps for others to reproduce the error** 1. Start Blender 2. Select Cube 3. Go to material tab 4. Set Subsurface slider to 1 5. In the 3d viewport enable the Diffuse Light Render Pass. [subsurface.blend](https://archive.blender.org/developer/F8908903/subsurface.blend) **Technical Analysis** When postprocessing the render pass the second light texture is already black. The output of the render pass accum is also black. when removing the early break in gpu framebuffer it will render the sss. But it has flickering. ``` diff --git a/source/blender/gpu/intern/gpu_framebuffer.cc b/source/blender/gpu/intern/gpu_framebuffer.cc index 8d9a1301be0..99b671ed72c 100644 --- a/source/blender/gpu/intern/gpu_framebuffer.cc +++ b/source/blender/gpu/intern/gpu_framebuffer.cc @@ -107,10 +107,10 @@ void FrameBuffer::attachment_set(GPUAttachmentType type, const GPUAttachment &ne GPUAttachment &attachment = attachments_[type]; - if (attachment.tex == new_attachment.tex && attachment.layer == new_attachment.layer && - attachment.mip == new_attachment.mip) { - return; /* Exact same texture already bound here. */ - } + // if (attachment.tex == new_attachment.tex && attachment.layer == new_attachment.layer && + // attachment.mip == new_attachment.mip) { + // return; /* Exact same texture already bound here. */ + // } /* Unbind previous and bind new. */ /* TODO(fclem): cleanup the casts. */ if (attachment.tex) { ```
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-09-22 13:43:11 +02:00
Author
Member

Added subscriber: @fclem
Removed subscriber: @Jeroen-Bakker

Added subscriber: @fclem Removed subscriber: @Jeroen-Bakker
Author
Member

@fclem any idea what could be wrong here. could be related to the pass that is draw twice with a different framebuffer?

@fclem any idea what could be wrong here. could be related to the pass that is draw twice with a different framebuffer?
Jeroen Bakker removed their assignment 2020-09-25 11:35:45 +02:00
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by 76b15e338a

This issue was referenced by 76b15e338aa288cedc19dfe5fae3d2be0456bf4c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2020-10-07 14:09:32 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:22 +01:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#81055
No description provided.